# toycomp

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: checkerboard.lang  wrong_call.lang  wrong_decl.lang  wrong_signature.lang
src/: lib.rs
src/automata/: dfa.rs  mod.rs  ndfa.rs  shunting_yard.rs  tagged_ndfa.rs
src/lang/: ast.rs  ast_builder.rs  codegen.rs  grammar.rs  lexer.rs  mod.rs  parser.rs
src/lexer/: mod.rs
src/semantic_analyzer/: mod.rs
src/static_analizer/grammar/: mod.rs
src/static_analyzer/: lalr.rs  lr_parser.rs  mod.rs  owned_lalr.rs  symbol_stack.rs  tree_builder.rs
src/static_analyzer/grammar/: mod.rs
